--- a/survey/templates/survey/Demographics.html
+++ b/survey/templates/survey/Demographics.html
@@ -1,11 +1,17 @@
 {% extends "global/Page.html" %}
 {% load staticfiles otree_tags %}
 
+
+
 {% block title %}
+    <font color="#FFFF00">
     Demographic Survey
 {% endblock %}
 
 {% block content %}
+    <body style="background-color:#0000FF;">
+    <font color="#FFFF00">
+
     <p>
     Please fill in the following survey:
     </p>
