--- a/survey/templates/survey/Instructions.html
+++ b/survey/templates/survey/Instructions.html
@@ -1,11 +1,17 @@
 {% extends "global/Page.html" %}
 {% load staticfiles otree_tags %}
 
+
 {% block title %}
-    Page title
+    <font color="#FFFF00">
+    Instructions
 {% endblock %}
 
 {% block content %}
+    <body style="background-color:#0000FF;">
+    <font color="#FFFF00">
+
+    Here come the instructions.
 
 <!--
 Documentation on how to write a django template here:
