--- a/prisoners_dilemma/templates/prisoners_dilemma/Instructions.html
+++ b/prisoners_dilemma/templates/prisoners_dilemma/Instructions.html
@@ -2,11 +2,13 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Page title
+    Instructions
 {% endblock %}
 
 {% block content %}
 
+    In this experiment you will play a two-person prisoners dilemma. You and a second player
+    will choose a strategy.
 <!--
 Documentation on how to write a django template here:
 https://docs.djangoproject.com/en/1.8/ref/templates/language/
