--- a/prisoners_dilemma/templates/prisoners_dilemma/Results.html
+++ b/prisoners_dilemma/templates/prisoners_dilemma/Results.html
@@ -8,8 +8,13 @@
 {% block content %}
 
     <p>
-    Your choice: {{ player.choice }}
-    Your partners choice:
+    Your choice: {{ results_choice }}
+    </p>
+
+    <br>
+
+    <p>
+    Your partners choice: {{ results_your_partners_choice }}
     </p>
 
     <br>
