--- a/prisoners_dilemma/templates/prisoners_dilemma/ResultsWaitPage.html
+++ b/prisoners_dilemma/templates/prisoners_dilemma/ResultsWaitPage.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "global/Page.html" %}
+{% load staticfiles otree_tags %}
 
-</body>
-</html>
+{% block title %}
+    Your Result
+{% endblock %}
+
+{% block content %}
+
+
+    {% next_button %}
+
+{% endblock %}
