working prisoners dilemma 2

--- a/prisoners_dilemma/templates/prisoners_dilemma/Instructions.html
+++ b/prisoners_dilemma/templates/prisoners_dilemma/Instructions.html
@@ -8,7 +8,9 @@
 {% block content %}
 
     In this experiment you will play a two-person prisoners dilemma. You and a second player
-    will choose a strategy.
+    will choose a strategy - either to cooperate with each other, or to defect. Your payoff
+    at the end will depend on your decision, as well as on the decision of your partner.
+    Choose wisely!
 <!--
 Documentation on how to write a django template here:
 https://docs.djangoproject.com/en/1.8/ref/templates/language/
