--- a/prisoners_dilemma/templates/prisoners_dilemma/ResultsWaitPage.html
+++ b/prisoners_dilemma/templates/prisoners_dilemma/ResultsWaitPage.html
@@ -2,10 +2,11 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Your Result
+    Please wait, until your partner makes his decision.
 {% endblock %}
 
 {% block content %}
+
 
 
     {% next_button %}
