--- a/investment/templates/investment/Instructions.html
+++ b/investment/templates/investment/Instructions.html
@@ -6,7 +6,23 @@
 {% endblock %}
 
 {% block content %}
-To be added.
+
+    <p>
+        In this experiment you will play an investment task. In the beginning, you get assigned either a low endowment of 100
+        Euro, or a high endwoment of 1000 Euro. Both amounts are equiprobable. You can then choose to invest an arbitrary
+        amount of money into an investment option.
+    </p>
+
+    <br>
+
+    <p>
+        With a probability of 0.5 this investment will be successful. In this case your invested amount will be doubled.
+        Otherwise, the amount invested is lost. In any case, you will also receive whatever is left of your endowment.
+    </p>
+
+    <br>
+
+    <br>
 <!--
 Documentation on how to write a django template here:
 https://docs.djangoproject.com/en/1.8/ref/templates/language/
